[package]
name = "vestaboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vestalia = "0.1.0"
async-std = "1.8.0"
config = "0.13.3"
lazy_static = "1.4.0"
serde = { version = "1.0.125", features = ["derive"] }
tokio = { version = "1.6.0", features = ["full"] }
chrono = "0.4.19"
rspotify = { version = "0.11.6", features = ["cli"] }
openweathermap = "0.2.4"